--- a/todo_frontend/pages/authors.html
+++ b/todo_frontend/pages/authors.html
@@ -7,39 +7,44 @@
   <meta name="description" content="Library Website">
   <meta name="keywords" content="HTML,CSS,JavaScript,NodeJS">
   <title>La Biblioteca de Babel</title>
-  <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="images/icon.png">
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- CSS -->
   <link href="./assets/style.css" rel="stylesheet">
   <style>
-    /* Ajuste del margen lateral */
     .table-responsive {
       margin: 0 5%;
     }
-    /* Botón de editar */
     .btn-edit {
-      background-color: #007bff; /* Azul */
+      background-color: #007bff; 
       border: none;
       color: white;
     }
     .btn-edit:hover {
       background-color: #0056b3;
     }
-    /* Botón de eliminar */
     .btn-delete {
-      background-color: #dc3545; /* Rojo */
+      background-color: #dc3545; 
       border: none;
       color: white;
     }
     .btn-delete:hover {
       background-color: #c82333;
     }
+
+    /* Estilo para el título */
+    .page-title {
+      font-family: 'Helvetica', sans-serif;
+      text-align: center;
+      margin-bottom: 1.5rem;
+      font-size: 2.5rem;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
-  <!-- Navbar -->
+  <!-- Navbar con botón "Nuevo Autor" a la derecha -->
   <nav class="navbar navbar-expand-md navbar-light">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,50 +54,47 @@
         <a class="navbar-brand" href="index.html">
           <img src="images/icon.png" width="50" alt="Website icon">
         </a>
-        <ul class="navbar-nav d-flex justify-content-center align-items-center">
+        <ul class="navbar-nav me-auto d-flex justify-content-center align-items-center">
           <li class="nav-item"><a class="nav-link" aria-current="page" href="index.html">Inicio</a></li>
           <li class="nav-item"><a class="nav-link" href="books.html">Libros</a></li>
           <li class="nav-item"><a class="nav-link" href="loans.html">Préstamos</a></li>
           <li class="nav-item"><a class="nav-link active" href="authors.html">Autores</a></li>
         </ul>
+        <div class="d-flex">
+          <a href="create_authors.html" class="btn btn-success">Nuevo Autor</a>
+        </div>
       </div>
     </div>
   </nav>
 
+  <!-- Sección de la Tabla de Autores -->
   <section>
     <div class="container">
-      <div class="d-flex justify-content-between align-items-center mb-3">
-        <h1 class="text-center" style="font-family: 'Courier New', Courier, monospace;">Tabla de Autores</h1>
-        <!-- Botón para crear un nuevo autor -->
-        <a href="create_authors.html" class="btn btn-success">Nuevo Autor</a>
+      <!-- Título centrado con tipografía Helvetica -->
+      <h1 class="page-title">Tabla de Autores</h1>
+      <div class="table-responsive">
+        <table class="table">
+          <thead class="table-dark">
+            <tr>
+              <th scope="col">ID</th>
+              <th scope="col">Autor</th>
+              <th scope="col">Nacionalidad</th>
+              <th scope="col">Fecha de Nacimiento</th>
+              <th scope="col">Biografía</th>
+              <th scope="col">Libros en Stock</th>
+              <th scope="col">Acciones</th>
+            </tr>
+          </thead>
+          <tbody id="authorsTable">
+          </tbody>
+        </table>
       </div>
-    <div class="table-responsive">
-      <table class="table">
-        <thead class="table-dark">
-          <tr>
-            <th scope="col">ID</th>
-            <th scope="col">Autor</th>
-            <th scope="col">Nacionalidad</th>
-            <th scope="col">Fecha de Nacimiento</th>
-            <th scope="col">Biografía</th>
-            <th scope="col">Libros en Stock</th>
-            <th scope="col">Acciones</th>
-          </tr>
-        </thead>
-        <tbody id="authorsTable">
-          <!-- Aquí se inyectarán los datos -->
-        </tbody>
-      </table>
     </div>
   </section>
-
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   
-  <!-- Script para cargar autores y gestionar botones -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", () => {
-      // Cargar autores desde la API
       fetch('http://localhost:5000/api/authors')
         .then(response => {
           if (!response.ok) throw new Error("Error al obtener los datos");
@@ -100,10 +102,8 @@
         })
         .then(authors => {
           const tableBody = document.getElementById('authorsTable');
-          tableBody.innerHTML = ''; // Limpiar antes de agregar filas
-
+          tableBody.innerHTML = ''; 
           authors.forEach(author => {
-
             const row = document.createElement('tr');
             row.innerHTML = `
               <td>${author.id}</td>
@@ -121,17 +121,12 @@
           });
         })
         .catch(error => console.error("Error:", error));
-
-      // Delegación de eventos para los botones de editar y eliminar
+      
       document.getElementById('authorsTable').addEventListener('click', (event) => {
-        // Si se hizo click en un botón de editar
         if (event.target.classList.contains('btn-edit')) {
           const id = event.target.dataset.id;
-          // Ejemplo: Solicitar un nuevo nombre para el autor (puedes modificar esto según tu necesidad)
           window.location.href = `edit_authors.html?id=${id}`;
         }
-
-        // Si se hizo click en un botón de eliminar
         if (event.target.classList.contains('btn-delete')) {
           const id = event.target.dataset.id;
           if (confirm("¿Estás seguro de que deseas eliminar este registro?")) {
@@ -144,7 +139,7 @@
             })
             .then(data => {
               alert("Registro eliminado correctamente");
-              location.reload(); // Recarga la página para ver los cambios
+              location.reload(); 
             })
             .catch(error => {
               console.error("Error:", error);
