--- a/todo_frontend/pages/books.html
+++ b/todo_frontend/pages/books.html
@@ -7,39 +7,42 @@
   <meta name="description" content="Library Website">
   <meta name="keywords" content="HTML,CSS,JavaScript,NodeJS">
   <title>La Biblioteca de Babel</title>
-  <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="images/icon.png">
-  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- CSS -->
   <link href="./assets/style.css" rel="stylesheet">
   <style>
-    /* Ajuste del margen lateral */
     .table-responsive {
       margin: 0 5%;
     }
-    /* Botón de editar */
     .btn-edit {
-      background-color: #007bff; /* Azul */
+      background-color: #007bff; 
       border: none;
       color: white;
     }
     .btn-edit:hover {
       background-color: #0056b3;
     }
-    /* Botón de eliminar */
     .btn-delete {
-      background-color: #dc3545; /* Rojo */
+      background-color: #dc3545; 
       border: none;
       color: white;
     }
     .btn-delete:hover {
       background-color: #c82333;
     }
+    /* Estilos para el título */
+    .page-title {
+      font-family: 'Helvetica', sans-serif;
+      text-align: center;
+      margin-bottom: 1.5rem;
+      font-size: 2.5rem;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
-  <!-- Navbar -->
+
+  <!-- Navbar con botón "Nuevo Libro" a la derecha -->
   <nav class="navbar navbar-expand-md navbar-light">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,12 +52,15 @@
         <a class="navbar-brand" href="index.html">
           <img src="images/icon.png" width="50" alt="Website icon">
         </a>
-        <ul class="navbar-nav d-flex justify-content-center align-items-center">
+        <ul class="navbar-nav me-auto d-flex justify-content-center align-items-center">
           <li class="nav-item"><a class="nav-link" aria-current="page" href="index.html">Inicio</a></li>
           <li class="nav-item"><a class="nav-link active" href="books.html">Libros</a></li>
           <li class="nav-item"><a class="nav-link" href="loans.html">Préstamos</a></li>
           <li class="nav-item"><a class="nav-link" href="authors.html">Autores</a></li>
         </ul>
+        <div class="d-flex">
+          <a href="create_books.html" class="btn btn-success">Nuevo Libro</a>
+        </div>
       </div>
     </div>
   </nav>
@@ -62,11 +68,7 @@
   <!-- Sección de la Tabla de Libros -->
   <section>
     <div class="container">
-      <div class="d-flex justify-content-between align-items-center mb-3">
-        <h1 class="text-center" style="font-family: 'Courier New', Courier, monospace;">Tabla de Libros</h1>
-        <!-- Botón para crear un nuevo libro -->
-        <a href="create_books.html" class="btn btn-success">Nuevo Libro</a>
-      </div>
+      <h1 class="page-title">Tabla de Libros</h1>
       <div class="table-responsive">
         <table class="table">
           <thead class="table-dark">
@@ -89,13 +91,10 @@
     </div>
   </section>
 
-  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   
-  <!-- Script para cargar libros y gestionar botones -->
   <script>
     document.addEventListener("DOMContentLoaded", () => {
-      // Cargar libros desde la API
       fetch('http://localhost:5000/api/books')
         .then(response => {
           if (!response.ok) throw new Error("Error al obtener los datos");
@@ -103,8 +102,7 @@
         })
         .then(books => {
           const tableBody = document.getElementById('booksTable');
-          tableBody.innerHTML = ''; // Limpiar antes de agregar filas
-
+          tableBody.innerHTML = ''; 
           books.forEach(book => {
             const row = document.createElement('tr');
             row.innerHTML = `
@@ -114,7 +112,6 @@
               <td>${book.genre}</td>
               <td>${book.language}</td>
               <td>${book.publication_date}</td>
-              <td>${book.stock > 0 ? 'Disponible' : 'No disponible'}</td>
               <td>
                 <button class="btn btn-edit btn-sm me-1" data-id="${book.id}">Editar</button>
                 <button class="btn btn-delete btn-sm" data-id="${book.id}">Eliminar</button>
@@ -125,16 +122,11 @@
         })
         .catch(error => console.error("Error:", error));
 
-      // Delegación de eventos para los botones de editar y eliminar
       document.getElementById('booksTable').addEventListener('click', (event) => {
-        // Si se hizo click en un botón de editar
         if (event.target.classList.contains('btn-edit')) {
           const id = event.target.dataset.id;
-          // Redirige a la ventana de edición para libros (por ejemplo, form_books.html)
           window.location.href = `edit_books.html?id=${id}`;
         }
-
-        // Si se hizo click en un botón de eliminar
         if (event.target.classList.contains('btn-delete')) {
           const id = event.target.dataset.id;
           if (confirm("¿Estás seguro de que deseas eliminar este registro?")) {
@@ -147,7 +139,7 @@
             })
             .then(data => {
               alert("Registro eliminado correctamente");
-              location.reload(); // Recarga la página para ver los cambios
+              location.reload();
             })
             .catch(error => {
               console.error("Error:", error);
