--- a/todo_frontend/pages/loans.html
+++ b/todo_frontend/pages/loans.html
@@ -7,39 +7,43 @@
   <meta name="description" content="Library Website">
   <meta name="keywords" content="HTML,CSS,JavaScript,NodeJS">
   <title>La Biblioteca de Babel - Préstamos</title>
-  <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="images/icon.png">
-  <!-- Bootstrap CSS -->
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- CSS personalizado -->
+  <!-- CSS -->
   <link href="./assets/style.css" rel="stylesheet">
   <style>
-    /* Ajuste del margen lateral */
     .table-responsive {
       margin: 0 5%;
     }
-    /* Botón de editar */
     .btn-edit {
-      background-color: #007bff; /* Azul */
+      background-color: #007bff; 
       border: none;
       color: white;
     }
     .btn-edit:hover {
       background-color: #0056b3;
     }
-    /* Botón de eliminar */
     .btn-delete {
-      background-color: #dc3545; /* Rojo */
+      background-color: #dc3545; 
       border: none;
       color: white;
     }
     .btn-delete:hover {
       background-color: #c82333;
     }
+    /* Estilo para el título */
+    .page-title {
+      font-family: 'Helvetica', sans-serif;
+      text-align: center;
+      margin-bottom: 1.5rem;
+      font-size: 2.5rem;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
-  <!-- Navbar -->
+  <!-- Navbar con botón "Nuevo Préstamo" a la derecha -->
   <nav class="navbar navbar-expand-md navbar-light">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,58 +53,48 @@
         <a class="navbar-brand" href="index.html">
           <img src="images/icon.png" width="50" alt="Website icon">
         </a>
-        <ul class="navbar-nav d-flex justify-content-center align-items-center">
+        <ul class="navbar-nav me-auto d-flex justify-content-center align-items-center">
           <li class="nav-item"><a class="nav-link" aria-current="page" href="index.html">Inicio</a></li>
           <li class="nav-item"><a class="nav-link" href="books.html">Libros</a></li>
           <li class="nav-item"><a class="nav-link active" href="loans.html">Préstamos</a></li>
           <li class="nav-item"><a class="nav-link" href="authors.html">Autores</a></li>
         </ul>
+        <div class="d-flex">
+          <a href="create_loans.html" class="btn btn-success">Nuevo Préstamo</a>
+        </div>
       </div>
     </div>
   </nav>
 
   <!-- Sección de la Tabla de Préstamos -->
-<section class="loans-section">
-  <div class="container">
-    <div class="row mb-3">
-      <div class="col-12 d-flex justify-content-between align-items-center">
-        <h1 style="font-family: 'Courier New', Courier, monospace;">Tabla de Prestamos</h1>
-        <!-- Botón para crear un nuevo prestamo -->
-        <a href="create_loans.html" class="btn btn-success">Nuevo Prestamo</a>
+  <section class="loans-section">
+    <div class="container">
+      <!-- Título centrado con tipografía Helvetica -->
+      <h1 class="page-title">Tabla de Préstamos</h1>
+      <div class="table-responsive">
+        <table class="table">
+          <thead class="table-dark">
+            <tr>
+              <th scope="col">ID</th>
+              <th scope="col">Libro</th>
+              <th scope="col">Precio</th>
+              <th scope="col">Lector</th>
+              <th scope="col">Fecha de Préstamo</th>
+              <th scope="col">Fecha de Devolución</th>
+              <th scope="col">Acciones</th>
+            </tr>
+          </thead>
+          <tbody id="loansTable">
+          </tbody>
+        </table>
       </div>
     </div>
-    <div class="row">
-      <div class="col-12">
-        <div class="table-responsive">
-          <table class="table">
-            <thead class="table-dark">
-              <tr>
-                <th scope="col">ID</th>
-                <th scope="col">Libro</th>
-                <th scope="col">Precio</th>
-                <th scope="col">Lector</th>
-                <th scope="col">Fecha de Préstamo</th>
-                <th scope="col">Fecha de Devolución</th>
-                <th scope="col">Acciones</th>
-              </tr>
-            </thead>
-            <tbody id="loansTable">
-              <!-- Aquí se inyectarán las filas -->
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+  </section>
 
-  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Script para cargar y gestionar la tabla de préstamos -->
   <script>
     document.addEventListener("DOMContentLoaded", () => {
-      // Se obtiene la lista de préstamos desde la API
       fetch("http://localhost:5000/api/loans")
         .then(response => {
           if (!response.ok) throw new Error("Error al obtener los datos");
@@ -108,9 +102,7 @@
         })
         .then(loans => {
           const tableBody = document.getElementById("loansTable");
-          tableBody.innerHTML = ""; // Limpiar contenido previo
-
-          // Recorrer el array de préstamos
+          tableBody.innerHTML = ""; 
           loans.forEach(loan => {
             const row = document.createElement("tr");
             row.innerHTML = `
@@ -130,11 +122,9 @@
         })
         .catch(error => console.error("Error:", error));
 
-      // Delegación de eventos para los botones
       document.getElementById("loansTable").addEventListener("click", (event) => {
         if (event.target.classList.contains("btn-edit")) {
           const id = event.target.dataset.id;
-          // Redirige a la ventana de edición de préstamos
           window.location.href = `edit_loans.html?id=${id}`;
         }
         if (event.target.classList.contains("btn-delete")) {
@@ -149,7 +139,7 @@
               })
               .then(data => {
                 alert("Préstamo eliminado correctamente");
-                location.reload(); // Recargar para ver los cambios
+                location.reload(); 
               })
               .catch(error => {
                 console.error("Error:", error);
