--- a/todo_frontend/pages/index.html
+++ b/todo_frontend/pages/index.html
@@ -15,47 +15,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- CSS -->
     <link href="./assets/style.css" rel="stylesheet">
-    <style>
-        /* Estilos personalizados */
-        .card {
-            transition: transform 0.2s;
-            border: 1px solid #ddd;
-            border-radius: 10px;
-            overflow: hidden;
-            cursor: pointer; /* Cambia el cursor al pasar sobre la tarjeta */
-        }
-        .card:hover {
-            transform: scale(1.05);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-        .card-img-top {
-            height: 200px;
-            object-fit: cover;
-        }
-        .card-body {
-            padding: 1.5rem;
-        }
-        .card-title {
-            font-size: 1.25rem;
-            font-weight: bold;
-        }
-        .card-text {
-            font-size: 0.9rem;
-            color: #555;
-        }
-        .availability {
-            font-weight: bold;
-            color: #28a745; /* Verde para disponibilidad */
-        }
-        .no-availability {
-            font-weight: bold;
-            color: #dc3545; /* Rojo para no disponibilidad */
-        }
-    </style>
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-md navbar-light">
+    <nav class="navbar navbar-expand-md navbar-light fixed-top">
         <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -65,9 +28,6 @@
                 <img src="images/icon.png" width="50" alt="Website icon">
             </a>
             <ul class="navbar-nav d-flex justify-content-center align-items-center">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-              </li>
               <li class="nav-item">
                 <a class="nav-link" href="books.html">Libros</a>
               </li>
@@ -164,6 +124,15 @@
             // Llamar a la función para obtener y mostrar los libros
             fetchBooks();
         });
+
+        window.addEventListener('scroll', function() {
+        const navbar = document.querySelector('.navbar');
+        if (window.scrollY > 50) {
+            navbar.classList.add('scrolled');
+        } else {
+            navbar.classList.remove('scrolled');
+        }
+    });
     </script>
     
 </body>
