--- a/todo_frontend/pages/authors.html
+++ b/todo_frontend/pages/authors.html
@@ -12,60 +12,34 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- CSS -->
   <link href="./assets/style.css" rel="stylesheet">
-  <style>
-    .table-responsive {
-      margin: 0 5%;
-    }
-    .btn-edit {
-      background-color: #007bff; 
-      border: none;
-      color: white;
-    }
-    .btn-edit:hover {
-      background-color: #0056b3;
-    }
-    .btn-delete {
-      background-color: #dc3545; 
-      border: none;
-      color: white;
-    }
-    .btn-delete:hover {
-      background-color: #c82333;
-    }
-
-    /* Estilo para el título */
-    .page-title {
-      font-family: 'Helvetica', sans-serif;
-      text-align: center;
-      margin-bottom: 1.5rem;
-      font-size: 2.5rem;
-      font-weight: bold;
-    }
-  </style>
 </head>
 <body>
-  <!-- Navbar con botón "Nuevo Autor" a la derecha -->
-  <nav class="navbar navbar-expand-md navbar-light">
+  <nav class="navbar navbar-expand-md navbar-light fixed-top">
     <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbar-toggler">
-        <a class="navbar-brand" href="index.html">
-          <img src="images/icon.png" width="50" alt="Website icon">
-        </a>
-        <ul class="navbar-nav me-auto d-flex justify-content-center align-items-center">
-          <li class="nav-item"><a class="nav-link" aria-current="page" href="index.html">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link" href="books.html">Libros</a></li>
-          <li class="nav-item"><a class="nav-link" href="loans.html">Préstamos</a></li>
-          <li class="nav-item"><a class="nav-link active" href="authors.html">Autores</a></li>
-        </ul>
-        <div class="d-flex">
-          <a href="create_authors.html" class="btn btn-success">Nuevo Autor</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbar-toggler">
+            <a class="navbar-brand" href="index.html">
+                <img src="images/icon.png" width="50" alt="Website icon">
+            </a>
+            <ul class="navbar-nav d-flex justify-content-center align-items-center">
+                <li class="nav-item">
+                    <a class="nav-link" href="books.html">Libros</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="loans.html">Préstamos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="authors.html">Autores</a>
+                </li>
+                <li class="nav-item">
+                    <a class="btn btn-outline-dark" href="create_authors.html">Añadir Autor</a>
+                </li>
+            </ul>
         </div>
-      </div>
     </div>
-  </nav>
+</nav>
 
   <!-- Sección de la Tabla de Autores -->
   <section>
