--- a/todo_frontend/pages/books.html
+++ b/todo_frontend/pages/books.html
@@ -10,86 +10,60 @@
   <link rel="icon" type="image/x-icon" href="images/icon.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="./assets/style.css" rel="stylesheet">
-  <style>
-    .table-responsive {
-      margin: 0 5%;
-    }
-    .btn-edit {
-      background-color: #007bff; 
-      border: none;
-      color: white;
-    }
-    .btn-edit:hover {
-      background-color: #0056b3;
-    }
-    .btn-delete {
-      background-color: #dc3545; 
-      border: none;
-      color: white;
-    }
-    .btn-delete:hover {
-      background-color: #c82333;
-    }
-    /* Estilos para el título */
-    .page-title {
-      font-family: 'Helvetica', sans-serif;
-      text-align: center;
-      margin-bottom: 1.5rem;
-      font-size: 2.5rem;
-      font-weight: bold;
-    }
-  </style>
 </head>
 <body>
 
-  <!-- Navbar con botón "Nuevo Libro" a la derecha -->
-  <nav class="navbar navbar-expand-md navbar-light">
+  <nav class="navbar navbar-expand-md navbar-light fixed-top">
     <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbar-toggler">
-        <a class="navbar-brand" href="index.html">
-          <img src="images/icon.png" width="50" alt="Website icon">
-        </a>
-        <ul class="navbar-nav me-auto d-flex justify-content-center align-items-center">
-          <li class="nav-item"><a class="nav-link" aria-current="page" href="index.html">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link active" href="books.html">Libros</a></li>
-          <li class="nav-item"><a class="nav-link" href="loans.html">Préstamos</a></li>
-          <li class="nav-item"><a class="nav-link" href="authors.html">Autores</a></li>
-        </ul>
-        <div class="d-flex">
-          <a href="create_books.html" class="btn btn-success">Nuevo Libro</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbar-toggler">
+            <a class="navbar-brand" href="index.html">
+                <img src="images/icon.png" width="50" alt="Website icon">
+            </a>
+            <ul class="navbar-nav d-flex justify-content-center align-items-center">
+                <li class="nav-item">
+                    <a class="nav-link active" href="books.html">Libros</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="loans.html">Préstamos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="authors.html">Autores</a>
+                </li>
+                <li class="nav-item">
+                    <a class="btn btn-outline-dark" href="create_books.html">Añadir Libro</a>
+                </li>
+            </ul>
         </div>
-      </div>
     </div>
-  </nav>
+</nav>
 
-  <!-- Sección de la Tabla de Libros -->
-  <section>
-    <div class="container">
+<section>
+  <div class="container">
       <h1 class="page-title">Tabla de Libros</h1>
       <div class="table-responsive">
-        <table class="table">
-          <thead class="table-dark">
-            <tr>
-              <th scope="col">ID</th>
-              <th scope="col">Título</th>
-              <th scope="col">Autor</th>
-              <th scope="col">Género</th>
-              <th scope="col">Idioma</th>
-              <th scope="col">Fecha de Publicación</th>
-              <th scope="col">Disponibilidad</th>
-              <th scope="col">Acciones</th>
-            </tr>
-          </thead>
-          <tbody id="booksTable">
-            <!-- Aquí se inyectarán los datos -->
-          </tbody>
-        </table>
+          <table class="table">
+              <thead class="table-dark">
+                  <tr>
+                      <th scope="col">ID</th>
+                      <th scope="col">Título</th>
+                      <th scope="col">Autor</th>
+                      <th scope="col">Género</th>
+                      <th scope="col">Idioma</th>
+                      <th scope="col">Fecha de Publicación</th>
+                      <th scope="col">Disponibilidad</th>
+                      <th scope="col">Acciones</th>
+                  </tr>
+              </thead>
+              <tbody id="booksTable">
+                  <!-- Aquí se inyectarán los datos -->
+              </tbody>
+          </table>
       </div>
-    </div>
-  </section>
+  </div>
+</section>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   
@@ -149,6 +123,15 @@
           }
         }
       });
+    });
+
+    window.addEventListener('scroll', function() {
+        const navbar = document.querySelector('.navbar');
+        if (window.scrollY > 50) {
+            navbar.classList.add('scrolled');
+        } else {
+            navbar.classList.remove('scrolled');
+        };
     });
   </script>
 </body>
